fonts and style added

--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-
+        <meta charset="UTF-8">
+        <title>Saeed Johar</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Fruktur&display=swap" rel="stylesheet"> 
     </head>
-    <body>
+    <body style="margin:0; padding:0; width:100vw; height:100vh; display:flex; justify-content:center; align-items:center; font-size:50pt; font-family: 'Fruktur', cursive;">
        
-    <h1> Under Construction </h1>
+        <span> Under Construction </span>
+    </body>
 </html>
